working example of automatic timing on an object method

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 
 <h3>PerfMon R&D</h3>
 
-<p>Based on a technique discussed by Rodrigo from WalmartLabs.</p>
+<p>Based on a the technique <em>Aspect Oriented Programming</em> discussed by Rodrigo from WalmartLabs.</p>
 
-<script src="underscore-min.js"></script>
-<script src="app.js"></script>
+<p>Open the <em>Chrome Developer Tools</em> and look at the <em>Console</em> to see all of the
+  program results. Read the code to see why the run-time output is interesting.
+</p>
+
+<p>Leverages a library called <a href="https://github.com/cujojs/meld">meld</a>.</p>
+
+<script data-main='./code/main' src='./code/require.js'></script>
 
 </body>
 </html>
