encapsulate meld code into ChangeBehaviorOfTimeSuckWithPerfMon, removed unneed underscore library, additional research note on main page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <p>Leverages a library called <a href="https://github.com/cujojs/meld">meld</a>.</p>
 
+<a href="http://www.html5rocks.com/en/tutorials/webperformance/usertiming/">User Timing API</a>
+
 <script data-main='./code/main' src='./code/require.js'></script>
 
 </body>
